ingress-yaml/03-tomcat-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-01
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcat
  
  
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
        - name: tomcat01
          image: tomcat:9.0.63
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          lifecycle:
            postStart:
              exec:
                command:
                  - "/bin/bash"
                  - "-c"
                  - "cp -rf /usr/local/tomcat/webapps.dist/* /usr/local/tomcat/webapps/"

          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 200m
              memory: 400Mi
