ingress-yaml/02demoapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demoapp
spec:
  type: ClusterIP
  selector:
    app: demoapp
  ports:
    - name: http
      port: 80
      targetPort: 80
