ingress-yaml/04-tomcat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat01
spec:
  type: ClusterIP
  selector:
    app: tomcat
  ports:
    - name: tomcat
      port: 8080
      targetPort: 8080
