ingress-yaml/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test-1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: "nginx"
  rules:
    - host: test.chasecup.com
      http:
        paths:
          - path: /app(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: demoapp
                port:
                  number: 80
          - path: /java(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: tomcat01
                port:
                  number: 8080
