ingress-yaml/06-different-domain-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diffierent-domain-name
spec:
  ingressClassName: "nginx"
  rules:
    - host: app.chasecup.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demoapp
                port:
                  number: 80
    - host: java.chasecup.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tomcat01
                port:
                  number: 8080
